# proyecto2

./: README.md  clearcache.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32c61  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.old
Raspi/: interfaz.py  interfaz_sensor.py  servidor_puente.py
main/: CMakeLists.txt  blink_example_main.c  bmi270.c  bmi270.h  udp_client.c  udp_client.h  wifi_init.c  wifi_init.h
